Comprehensive architecture and documentation overhaul
This commit introduces a major refactoring of the Conductor framework to improve modularity, testability, security, and overall architecture. It also includes a complete overhaul of the project's documentation, consolidating scattered information into comprehensive guides.

Key changes include:

### Architecture & Refactoring

- Configuration System:
    - Introduced a robust, type-safe configuration system with clear separation of concerns (DatabaseConfig, LLMConfig, ToolConfig, etc.).
    - Implemented a PropertyLoader to handle configuration from multiple sources (properties files, environment variables, system properties) with clear precedence.
    - Added comprehensive validation for all configuration settings.

  - Exception Handling:
    - Replaced the granular error code system with a simplified, category-based approach (ErrorCategory) focused on retryability.
    - Introduced a new hierarchy of exceptions (SimpleConductorException, ProviderException, ToolException) for clearer error handling.

  - Workflow Engine:
    - Refactored DefaultWorkflowEngine and YamlWorkflowEngine to use a shared StageExecutor, ensuring consistent execution logic.
    - Introduced WorkflowComponentFactory to manage dependency injection, improving testability.
    - Added JSON schema validation for YAML workflows to catch errors early.

  - Security:
    - Implemented PathSecurityValidator and PathAttackDetector to provide defense-in-depth against path traversal and other file-based attacks.
    - Hardened the CodeRunnerTool and FileReadTool with stricter validation.

  - Provider Model:
    - Introduced capability interfaces (StreamingLLMProvider, EmbeddingLLMProvider, VisionLLMProvider) to allow for future expansion.
    - Added RetryableLLMProvider decorator to decouple retry logic from provider implementations.

  ### Documentation

  - Consolidated Documentation:
    - Deleted DEVELOPER_SETUP.md, NO_CODE_SYSTEM.md, and TEC